remove "formerly jigsaw" placeholder text

--- a/popup/index.html
+++ b/popup/index.html
@@ -19,7 +19,7 @@
             <span aria-hidden="true">|</span>
             <a id="update-link" href="#" class="font-medium hover:text-emerald-300">a new version is available</a>
           </span>
-          <span class="text-slate-500" aria-hidden="true">| formerly jigsaw</span>
+          <!-- <span class="text-slate-500" aria-hidden="true">| formerly jigsaw</span> -->
         </p>
       </div>
     </header>
