--- a/popup/index.html
+++ b/popup/index.html
@@ -8,6 +8,13 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body class="min-w-[300px] bg-slate-950 text-slate-100">
+  <div id="hp-warning-banner" class="relative z-[1000] flex items-center gap-2 rounded-lg bg-red-900 px-4 py-2 mt-2 mx-2 shadow-lg text-white" style="display:none;">
+    <button id="hp-warning-close" class="border-none cursor-pointer" title="Close">
+      <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-x-icon lucide-x"><path d="M18 6 6 18"/><path d="m6 6 12 12"/></svg>
+    </button>
+    <span id="hp-warning-text" class="flex-1">Something went wrong!</span>
+    <button id="hp-flush-btn" class="bg-red-700 hover:bg-red-700/80 text-red-200 font-semibold px-3 py-1 rounded-md cursor-pointer">Reload</button>
+  </div>
   <div class="space-y-4 p-4">
     <header class="flex items-center gap-3 select-none">
       <img src="../icons/icon48.svg" alt="hackpuzzle icon" class="h-10 w-10 rounded-xl border border-slate-800 bg-slate-900" />
@@ -17,7 +24,7 @@
           <span id="version-label">v0.1.2</span>
           <span id="update-notice" class="inline-flex items-center gap-1 text-emerald-400" style="display: none;">
             <span aria-hidden="true">|</span>
-            <a id="update-link" href="#" class="font-medium hover:text-emerald-300">a new version is available</a>
+            <a id="update-link" href="#" class="font-medium hover:text-emerald-300">[new version may be available]</a>
           </span>
           <!-- <span class="text-slate-500" aria-hidden="true">| formerly jigsaw</span> -->
         </p>
@@ -28,7 +35,7 @@
       <div class="feature-toggle-row flex items-start justify-between gap-4">
         <div class="feature-copy space-y-1">
           <p class="text-sm font-medium text-slate-200">Advanced mode</p>
-          <p class="text-xs text-slate-400">Apply puzzle-skip to the current tab. Only for chess</p>
+          <p class="text-xs text-slate-400">Apply puzzle-skip to the current tab. [chess.com only]</p>
         </div>
         <div class="toggle-wrap flex flex-row justify-between items-end gap-2">
           <label class="relative inline-flex items-center cursor-pointer" aria-label="Toggle advanced features">
@@ -37,8 +44,8 @@
             <span class="toggle-thumb"></span>
           </label>
           <div class="compact-controls">
-            <button id="compactExitBtn" type="button" class="rounded-lg border border-slate-800/70 bg-slate-900/50 px-2 py-1 text-[11px] font-medium text-slate-200 transition hover:bg-slate-800/70">Expand</button>
-            <button id="compactFlushBtn" type="button" class="rounded-lg border border-slate-800/70 bg-slate-900/50 px-1 py-1 text-slate-300 transition hover:bg-slate-800/70" aria-label="Flush cache">
+            <button id="compactExitBtn" title="Exit compact mode" type="button" class="rounded-lg border border-slate-800/70 bg-slate-900/50 px-2 py-1 text-[11px] font-medium text-slate-200 transition hover:bg-slate-800/70">Expand</button>
+            <button id="compactFlushBtn" title="Flush cache and reload" type="button" class="rounded-lg border border-slate-800/70 bg-slate-900/50 px-1 py-1 text-slate-300 transition hover:bg-slate-800/70" aria-label="Flush cache">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="h-4 w-4">
                 <path d="M21 5H3" />
                 <path d="M7 12H3" />
@@ -55,15 +62,15 @@
           <span id="status-dot" class="status-dot status-dot--loading"></span>
           <span id="status-text">Checking...</span>
         </span>
-        <button id="refresh" type="button" class="rounded-full border border-slate-800/80 px-2 py-1 text-[10px] font-medium uppercase tracking-wide text-slate-400 transition hover:border-slate-700 hover:text-slate-200">Refresh</button>
+        <button id="refresh" title="Refresh status" type="button" class="rounded-full border border-slate-800/80 px-2 py-1 text-[10px] font-medium uppercase tracking-wide text-slate-400 transition hover:border-slate-700 hover:text-slate-200">Re-check</button>
       </div>
     </section>
 
     <section id="actionRow" class="flex items-center gap-2 mt-2">
-      <button id="compactBtn" type="button" class="rounded-xl w-full bg-slate-800/60 px-3 py-2 text-sm font-medium text-slate-100 hover:bg-slate-800">
+      <button id="compactBtn" title="Toggle compact mode" type="button" class="rounded-xl w-full bg-slate-800/60 px-3 py-2 text-sm font-medium text-slate-100 hover:bg-slate-800">
         Compact Mode
       </button>
-      <button id="flushBtn" type="button" class="rounded-lg border border-slate-800/80 bg-slate-900/40 px-1.5 py-1.5 text-sm font-medium text-slate-300 hover:bg-slate-800/60">
+      <button id="flushBtn" title="Flush cache and reload" type="button" class="rounded-lg border border-slate-800/80 bg-slate-900/40 px-1.5 py-1.5 text-sm font-medium text-slate-300 hover:bg-slate-800/60">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="w-5 lucide lucide-list-restart-icon lucide-list-restart"><path d="M21 5H3"/><path d="M7 12H3"/><path d="M7 19H3"/><path d="M12 18a5 5 0 0 0 9-3 4.5 4.5 0 0 0-4.5-4.5c-1.33 0-2.54.54-3.41 1.41L11 14"/><path d="M11 10v4h4"/></svg>
       </button>
     </section>
